# rproxy

./: .gitignore  Cargo.toml  README.md
crates/rproxy-core/: Cargo.toml  build.rs
crates/rproxy-core/data/: geosite-cn.txt
crates/rproxy-core/examples/: live_google.rs  live_protocols.rs
crates/rproxy-core/src/: app.rs  config.rs  lib.rs  pac.rs  routing.rs  tun.rs
crates/rproxy-core/src/platform/: linux.rs  mod.rs  windows.rs
crates/rproxy-core/src/proxy/: mod.rs  outbound.rs
crates/rproxy-core/src/routing/: geosite.rs
crates/rproxy-gui/: Cargo.toml
crates/rproxy-gui/src/: main.rs  tray.rs
crates/rproxy-gui/ui/: main.slint
data/: README.md
docs/: configuration.md  development-plan.md  product.md
examples/: default.yaml
