[workspace]
resolver = "2"
members = [
    "crates/rproxy-core",
    "crates/rproxy-gui",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/rproxy"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
directories = "5"
prost = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
slint = "1.8"
slint-build = "1.8"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
webbrowser = "1"
winreg = "0.52"
