[workspace]
resolver = "2"
members = [
    "crates/rproxy-core",
    "crates/rproxy-gui",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/rproxy"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
cfb-mode = "0.8"
crc32fast = "1"
directories = "5"
futures-util = "0.3"
hmac = "0.12"
md-5 = "0.10"
prost = "0.13"
rand = "0.9"
regex = "1"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
slint = { version = "1.8", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }
slint-build = "1.8"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tray-icon = "0.24.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = "1"
webbrowser = "1"
webpki-roots = "0.26"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
