[package]
name = "rproxy-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
base64.workspace = true
cfb-mode.workspace = true
crc32fast.workspace = true
directories.workspace = true
futures-util.workspace = true
hmac.workspace = true
md-5.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
webpki-roots.workspace = true
winreg.workspace = true
